--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           "@rick-and-morty/mf-gallery": "https://rick-and-morty-microfrotends.github.io/mf-gallery/rick-and-morty-mf-gallery.js",
           "@rick-and-morty/mf-character": "https://rick-and-morty-microfrotends.github.io/mf-character/rick-and-morty-mf-character.js",
           "@rick-and-morty/styleguide": "https://rick-and-morty-microfrotends.github.io/styleguide/rick-and-morty-styleguide.js",
-          "@rick-and-morty/api": "https://rick-and-morty-microfrotends.github.io/api/rick-and-morty-api.js",
+          "@rick-and-morty/api": "https://rick-and-morty-microfrotends.github.io/api/rick-and-morty-api.js"
         }
       }</script><script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script><script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script><script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><script>System.import('@rick-and-morty/root-config');
     System.import('@rick-and-morty/api');</script><import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full><script src="https://rick-and-morty-microfrotends.github.io/top-button-smooth/top-button-smooth.js"></script><top-button-smooth></top-button-smooth></body></html>
